# NearlyRealEngine

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: Makefile  NRE_Main.cpp
src/Camera/: NRE_Camera.hpp  NRE_Camera.tpp
src/Camera/Orthographic/: NRE_OrthographicCamera.hpp  NRE_OrthographicCamera.tpp
src/Camera/Perspective/: NRE_PerspectiveCamera.hpp  NRE_PerspectiveCamera.tpp
src/Core/Interfaces/Allocable/: NRE_Allocable.hpp
src/Core/Interfaces/Bindable/: NRE_Bindable.hpp
src/Core/Interfaces/Identifiable/: NRE_Identifiable.hpp
src/ECS/Component/Light/: NRE_Light.hpp
src/ECS/Component/Renderable/: NRE_InstancedRenderable.hpp  NRE_Model.hpp  NRE_ModelRenderable.hpp  NRE_Renderable.hpp  NRE_Terrain.hpp  NRE_VoxelRenderable.hpp  NRE_Water.hpp  NRE_WaterSurface.hpp
src/ECS/System/: NRE_DebugDeferredSystem.hpp  NRE_DeferredSystem.hpp  NRE_FlockSystem.hpp  NRE_GBufferSystem.hpp  NRE_InstancedGBufferSystem.hpp  NRE_InstancedShadowSystem.hpp  NRE_ShadowSystem.hpp  NRE_WaterSystem.hpp
src/Exception/: NRE_AssimpException.hpp  NRE_GLException.hpp  NRE_STBException.hpp  NRE_ShaderException.hpp
src/GL/: Makefile  NRE_GL.cpp  NRE_GL.hpp  NRE_GL.tpp  NRE_GLUtils.hpp  NRE_GLUtils.tpp
src/GL/Buffer/Array/: NRE_ArrayBuffer.hpp  NRE_ArrayBuffer.tpp
src/GL/Buffer/Array/Attribute/: NRE_AttributeBuffer.hpp  NRE_AttributeBuffer.tpp
src/GL/Buffer/Array/Element/: NRE_ElementBuffer.hpp  NRE_ElementBuffer.tpp
src/GL/Buffer/Array/Uniform/: NRE_UniformBuffer.hpp  NRE_UniformBuffer.tpp
src/GL/Buffer/Attachable/: NRE_Attachable.hpp  NRE_Attachable.tpp
src/GL/Buffer/Attachable/RenderBuffer/: NRE_RenderBuffer.hpp  NRE_RenderBuffer.tpp
src/GL/Buffer/Attachable/Texture/: NRE_TextureBuffer.hpp  NRE_TextureBuffer.tpp
src/GL/Buffer/FrameBuffer/: NRE_FrameBuffer.hpp  NRE_FrameBuffer.tpp
src/GL/Buffer/VAO/: NRE_VAO.hpp  NRE_VAO.tpp
src/GL/FBO/: NRE_FBO.hpp  NRE_FBO.tpp
src/GL/Texture/Material/: NRE_Material.hpp  NRE_Material.tpp
src/GL/Texture/Material/Array/: NRE_MaterialArray.hpp  NRE_MaterialArray.tpp
src/GL/Texture/SkyBox/: NRE_SkyBox.cpp  NRE_SkyBox.hpp  NRE_SkyBox.tpp
src/GL/Texture/Surface/: NRE_Surface.hpp  NRE_Surface.tpp
src/GL/Texture/Texture2D/: NRE_Texture2D.hpp  NRE_Texture2D.tpp
src/GL/Texture/Texture2DArray/: NRE_Texture2DArray.hpp  NRE_Texture2DArray.tpp
src/GL/VBO/: NRE_AbstractVBO.hpp  NRE_AbstractVBO.tpp  NRE_VBO.hpp  NRE_VBO.tpp
src/GL/VBO/IBO/: NRE_IBO.hpp  NRE_IBO.tpp
src/GL/VBO/Layout/: NRE_Layout.hpp
src/GL/VBO/Layout/Material/: NRE_MaterialVertex.hpp
src/GL/VBO/Layout/Matrix/: NRE_ColoredMatrixInstance.hpp  NRE_MatrixInstance.hpp
src/GL/VBO/Layout/Model/: NRE_ModelVertex.hpp
src/GL/VBO/Layout/Point/: NRE_PointVertex.hpp
src/GL/VBO/Layout/Primitive/: NRE_PrimitiveVertex.hpp
src/GL/VBO/Layout/Terrain/: NRE_TerrainVertex.hpp
src/GL/VBO/Layout/Voxel/: NRE_VoxelVertex.hpp
src/GL/VBO/Layout/Water/: NRE_WaterVertex.hpp
src/Header/: NRE_Buffer.hpp  NRE_Camera.hpp  NRE_Core.hpp  NRE_ECS.hpp  NRE_Exception.hpp  NRE_GL.hpp  NRE_GLUtils.hpp  NRE_Model.hpp  NRE_Physics.hpp  NRE_Renderer.hpp  NRE_Shader.hpp  NRE_Texture.hpp  NRE_Utility.hpp  NRE_World.hpp
src/Model/CullableMesh/: NRE_CullableMesh.hpp  NRE_CullableMesh.tpp
src/Model/Mesh/: NRE_Mesh.hpp  NRE_Mesh.tpp
src/Model/Model/: NRE_Model.hpp  NRE_Model.tpp
src/Model/Model/CullableModel/: NRE_CullableModel.hpp  NRE_CullableModel.tpp
src/Model/Model/Instanced/: NRE_InstancedModel.hpp  NRE_InstancedModel.tpp
src/Model/Model/TypedModel/: NRE_TypedModel.hpp  NRE_TypedModel.tpp
src/Model/TypedMesh/: NRE_TypedMesh.hpp  NRE_TypedMesh.tpp
src/Physics/Cube/: NRE_Cube.hpp  NRE_Cube.tpp
src/Physics/Cube/Mesh/: NRE_CubeMesh.hpp
src/Physics/Rectangle/: NRE_Rectangle.hpp  NRE_Rectangle.tpp
src/Physics/Rectangle/Mesh/: NRE_RectangleMesh.hpp
src/Physics/Sphere/: NRE_Sphere.hpp  NRE_Sphere.tpp
src/Physics/Sphere/Mesh/: NRE_SphereMesh.hpp
src/Renderer/: Makefile
src/Renderer/Deferred/: NRE_DeferredRenderer.hpp  NRE_DeferredRenderer.tpp
src/Renderer/Material/: NRE_MaterialManager.hpp  NRE_MaterialManager.tpp
src/Renderer/Program/: Makefile  NRE_AbstractProgram.hpp  NRE_Program.cpp  NRE_Program.hpp  NRE_Program.tpp
src/Renderer/Program/Core/PBR/: NRE_PBR.hpp
src/Renderer/Program/Core/Phong/: NRE_Phong.hpp
src/Renderer/Program/Core/SSAO/: NRE_SSAOEffect.hpp
src/Renderer/Program/Core/Water/: NRE_Water.hpp
src/Renderer/Program/Manager/: NRE_ProgramManager.hpp
src/Renderer/Program/Shader/: Makefile  NRE_Shader.cpp  NRE_Shader.hpp  NRE_Shader.tpp
src/Renderer/Program/Shader/Fragment/: NRE_FragmentShader.hpp  NRE_FragmentShader.tpp
src/Renderer/Program/Shader/Geometry/: NRE_GeometryShader.hpp  NRE_GeometryShader.tpp
src/Renderer/Program/Shader/Vertex/: NRE_VertexShader.hpp  (+1 more)
src/Renderer/Program/Uniforms/: NRE_Uniforms.hpp  NRE_Uniforms.tpp
src/Renderer/SSAO/: NRE_SSAO.hpp  NRE_SSAO.tpp
src/Utility/Interfaces/Allocable/: NRE_Allocable.hpp
src/Utility/Interfaces/Bindable/: NRE_Bindable.hpp
src/Utility/Interfaces/Identifiable/: NRE_Identifiable.hpp
src/World/: Makefile  NRE_World.cpp  NRE_World.hpp  NRE_World.tpp
src/World/Cell/: NRE_Cell.hpp  NRE_Cell.tpp
src/World/Chunk/: NRE_Chunk.hpp  NRE_Chunk.tpp  NRE_WaterChunk.hpp  NRE_WaterChunk.tpp
src/World/Chunk/Cell/: NRE_Cell.hpp  NRE_Cell.tpp
src/World/Factory/: NRE_ChunkFactory.hpp  NRE_ChunkFactory.tpp  NRE_CloudFactory.hpp  NRE_CloudFactory.tpp  NRE_ShapeFactory.hpp  NRE_ShapeFactory.tpp
src/World/Mesh/: NRE_ChunkMesh.hpp  NRE_WaterChunkMesh.hpp
src/World/Model/: NRE_ChunkModel.hpp
src/World/Polygonizer/: NRE_CellPolygonizer.hpp  NRE_CellPolygonizer.tpp  NRE_ChunkPolygonizer.cpp  NRE_ChunkPolygonizer.hpp  NRE_ChunkPolygonizer.tpp  NRE_CloudPolygonizer.hpp  NRE_CloudPolygonizer.tpp
src/World/Voxel/: NRE_Voxel.hpp  NRE_Voxel.tpp  NRE_VoxelTypes.hpp  NRE_VoxelsContainer.hpp  NRE_VoxelsContainer.tpp
src/World/Voxel/Container/: NRE_VoxelsContainer.hpp  NRE_VoxelsContainer.tpp
src/lib/: Makefile
src/lib/FastNoise/: FastNoise.cpp  FastNoise.h  Makefile  README.md
(+24 files in other folders)
