cmake_minimum_required(VERSION 3.15)
project(NearlyRealEngine)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static -static-libgcc -static-libstdc++")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "../bin")
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pedantic -Wno-virtual-move-assign -Wall -Wextra -Wfatal-errors -Wfloat-equal -Wstrict-overflow -Wshadow -Wconversion -Wunreachable-code -Wuninitialized -Winit-self -Werror -fstrict-overflow -O3 -std=c++17")

include_directories(C:/Users/abell/Documents/GitHub/NRE-Utility/src)
include_directories(C:/Users/abell/Documents/GitHub/NRE-Math/src)
include_directories(C:/Users/abell/Documents/GitHub/NRE-System/src)
include_directories(C:/Users/abell/Documents/GitHub/NRE-IO/src)
include_directories(C:/Users/abell/Documents/GitHub/NRE-ECS/src)
include_directories(C:/lib/Glew/include)
include_directories(C:/lib/STB)
include_directories(C:/lib/GLM)

include_directories(src/Camera)
include_directories(src/Camera/Perspective)
include_directories(src/Exception)
include_directories(src/Physics/Cullable)
include_directories(src/Physics)
include_directories(src/GL)
include_directories(src/GL/Buffer)
include_directories(src/GL/Buffer/Array)
include_directories(src/GL/Buffer/Array/Attribute)
include_directories(src/GL/Buffer/Array/Element)
include_directories(src/GL/Buffer/Array/Uniform)
include_directories(src/GL/Buffer/Attachable)
include_directories(src/GL/Buffer/Attachable/RenderBuffer)
include_directories(src/GL/Buffer/Attachable/Texture)
include_directories(src/GL/Buffer/Attachable/Texture/2D)
include_directories(src/GL/Buffer/Attachable/Texture/3D)
include_directories(src/GL/Buffer/Attachable/Texture/CubeMap)
include_directories(src/GL/Buffer/FrameBuffer)
include_directories(src/GL/Buffer/VAO)
include_directories(src/GL/FBO)
include_directories(src/GL/Texture)
include_directories(src/GL/Texture/Material)
include_directories(src/GL/Texture/Material/Array)
include_directories(src/GL/Texture/SkyBox)
include_directories(src/GL/Texture/Surface)
include_directories(src/GL/Texture/Texture2D)
include_directories(src/GL/Texture/Texture2DArray)
include_directories(src/GL/VBO)
include_directories(src/GL/VBO/IBO)
include_directories(src/GL/VBO/Layout)
include_directories(src/GL/VBO/Layout/Primitive)
include_directories(src/Header)
include_directories(src/ECS/System)
include_directories(src/ECS/Component)
include_directories(src/lib/FastNoise)
include_directories(src/Renderer/Program)
include_directories(src/Renderer/Program/Core)
include_directories(src/Renderer/Program/Core/Debug)
include_directories(src/Renderer/Program/Core/Debug/Normal)
include_directories(src/Renderer/Program/Core/Primitive)
include_directories(src/Renderer/Program/Core/Primitive/2D)
include_directories(src/Renderer/Program/Core/Primitive/3D)
include_directories(src/Renderer/Program/Manager)
include_directories(src/Renderer/Program/Shader)
include_directories(src/Renderer/Program/Shader/Fragment)
include_directories(src/Renderer/Program/Shader/Geometry)
include_directories(src/Renderer/Program/Shader/Vertex)
include_directories(src/Renderer/Program/Uniforms)
include_directories(src/Utility)
include_directories(src/Utility/Interfaces)
include_directories(src/Utility/Interfaces/Bindable)
include_directories(src/Utility/Interfaces/Allocable)
include_directories(src/Utility/Interfaces/Identifiable)
include_directories(src/Model)
include_directories(src/Model/Model)
include_directories(src/Model/Model/Instanced)
include_directories(src/Model/Mesh)
include_directories(src/Model/TypedMesh)
include_directories(src/Model/CullableMesh)
include_directories(src/Physics)
include_directories(src/Physics/Mesh)
include_directories(src/World)
include_directories(src/World/Chunk)
include_directories(src/World/Factory)
include_directories(src/World/Polygonizer)

set(COMPILE_LIST
        src/Camera/Perspective/NRE_PerspectiveCamera.hpp
        src/Camera/NRE_Camera.hpp
        src/Exception/NRE_GLException.hpp
        src/Exception/NRE_ShaderException.hpp
        src/Exception/NRE_STBException.hpp
        src/GL/Buffer/Array/Attribute/NRE_AttributeBuffer.hpp
        src/GL/Buffer/Array/Element/NRE_ElementBuffer.hpp
        src/GL/Buffer/Array/Uniform/NRE_UniformBuffer.hpp
        src/GL/Buffer/Array/NRE_ArrayBuffer.hpp
        src/GL/Buffer/Attachable/RenderBuffer/NRE_RenderBuffer.hpp
        src/GL/Buffer/Attachable/Texture/2D/NRE_Texture2DBuffer.hpp
        src/GL/Buffer/Attachable/Texture/3D/NRE_Texture3DBuffer.hpp
        src/GL/Buffer/Attachable/Texture/CubeMap/NRE_CubeMap.hpp
        src/GL/Buffer/Attachable/Texture/NRE_TextureBuffer.hpp
        src/GL/Buffer/Attachable/NRE_Attachable.hpp
        src/GL/Buffer/FrameBuffer/NRE_FrameBuffer.hpp
        src/GL/Buffer/VAO/NRE_VAO.hpp
        src/GL/FBO/NRE_FBO.hpp
        src/GL/Texture/SkyBox/NRE_SkyBox.cpp
        src/GL/Texture/SkyBox/NRE_SkyBox.hpp
        src/GL/Texture/Material/NRE_Material.hpp
        src/GL/Texture/Material/Array/NRE_MaterialArray.hpp
        src/GL/Texture/Surface/NRE_Surface.hpp
        src/GL/Texture/Texture2D/NRE_Texture2D.hpp
        src/GL/Texture/Texture2DArray/NRE_Texture2DArray.hpp
        src/GL/VBO/IBO/NRE_IBO.hpp
        src/GL/VBO/Layout/Matrix/NRE_MatrixInstance.hpp
        src/GL/VBO/Layout/Matrix/NRE_ColoredMatrixInstance.hpp
        src/GL/VBO/Layout/Primitive/NRE_PrimitiveVertex.hpp
        src/GL/VBO/Layout/Point/NRE_PointVertex.hpp
        src/GL/VBO/Layout/Material/NRE_MaterialVertex.hpp
        src/GL/VBO/Layout/NRE_Layout.hpp
        src/GL/VBO/NRE_AbstractVBO.hpp
        src/GL/VBO/NRE_VBO.hpp
        src/GL/NRE_GL.cpp
        src/GL/NRE_GL.hpp
        src/ECS/System/NRE_DeferredSystem.hpp
        src/ECS/System/NRE_FlockSystem.hpp
        src/ECS/System/NRE_GBufferSystem.hpp
        src/ECS/System/NRE_InstancedGBufferSystem.hpp
        src/ECS/Component/Light/NRE_Light.hpp
        src/ECS/Component/Renderable/NRE_Renderable.hpp
        src/ECS/Component/Renderable/NRE_InstancedRenderable.hpp
        src/Header/NRE_Buffer.hpp
        src/Header/NRE_Camera.hpp
        src/Header/NRE_Core.hpp
        src/Header/NRE_ECS.hpp
        src/Header/NRE_Exception.hpp
        src/Header/NRE_GL.hpp
        src/Header/NRE_Model.hpp
        src/Header/NRE_Shader.hpp
        src/Header/NRE_Utility.hpp
        src/Header/NRE_Texture.hpp
        src/Header/NRE_Renderer.hpp
        src/Header/NRE_Physics.hpp
        src/Header/NRE_World.hpp
        src/lib/FastNoise/FastNoise.cpp
        src/lib/FastNoise/FastNoise.h
        src/Renderer/Program/Core/Debug/Normal/NRE_DebugNormal.hpp
        src/Renderer/Program/Core/GBuffer/GBuffer/NRE_GBuffer.hpp
        src/Renderer/Program/Core/GBuffer/InstancedGBuffer/NRE_InstancedGBuffer.hpp
        src/Renderer/Program/Core/IBL/BRDF/NRE_BRDF.hpp
        src/Renderer/Program/Core/IBL/Irradiance/NRE_Irradiance.hpp
        src/Renderer/Program/Core/IBL/Prefilter/NRE_Prefilter.hpp
        src/Renderer/Program/Core/PBR/NRE_PBR.hpp
        src/Renderer/Program/Core/SkyBox/Capture/NRE_Capture.hpp
        src/Renderer/Program/Core/SkyBox/SkyBox/NRE_SkyBox.hpp
        src/Renderer/Program/Core/Primitive/2D/NRE_Primitive2D.hpp
        src/Renderer/Program/Core/Primitive/3D/NRE_Primitive3D.hpp
        src/Renderer/Program/Core/Primitive/Instanced3D/NRE_InstancedPrimitive3D.hpp
        src/Renderer/Program/Manager/NRE_ProgramManager.hpp
        src/Renderer/Program/Shader/Fragment/NRE_FragmentShader.hpp
        src/Renderer/Program/Shader/Geometry/NRE_GeometryShader.hpp
        src/Renderer/Program/Shader/Vertex/NRE_VertexShader.hpp
        src/Renderer/Program/Shader/NRE_Shader.cpp
        src/Renderer/Program/Shader/NRE_Shader.hpp
        src/Renderer/Program/Uniforms/NRE_Uniforms.hpp
        src/Renderer/Program/NRE_AbstractProgram.hpp
        src/Renderer/Program/NRE_Program.cpp
        src/Renderer/Program/NRE_Program.hpp
        src/Renderer/Material/NRE_MaterialManager.hpp
        src/Renderer/Deferred/NRE_DeferredRenderer.hpp
        src/Utility/Interfaces/Allocable/NRE_Allocable.hpp
        src/Utility/Interfaces/Bindable/NRE_Bindable.hpp
        src/Utility/Interfaces/Identifiable/NRE_Identifiable.hpp
        src/Model/Mesh/NRE_Mesh.hpp
        src/Model/Mesh/NRE_Mesh.tpp
        src/Model/Model/NRE_Model.hpp
        src/Model/Model/NRE_Model.tpp
        src/Model/Model/Instanced/NRE_InstancedModel.hpp
        src/Model/Model/Instanced/NRE_InstancedModel.tpp
        src/Model/TypedMesh/NRE_TypedMesh.hpp
        src/Model/TypedMesh/NRE_TypedMesh.tpp
        src/Model/CullableMesh/NRE_CullableMesh.hpp
        src/Model/CullableMesh/NRE_CullableMesh.tpp
        src/Physics/Sphere/NRE_Sphere.hpp
        src/Physics/Sphere/NRE_Sphere.tpp
        src/Physics/Sphere/Mesh/NRE_SphereMesh.hpp
        src/Physics/Cube/NRE_Cube.hpp
        src/Physics/Cube/NRE_Cube.tpp
        src/Physics/Cube/Mesh/NRE_CubeMesh.hpp
        src/Physics/Rectangle/NRE_Rectangle.hpp
        src/Physics/Rectangle/NRE_Rectangle.tpp
        src/Physics/Rectangle/Mesh/NRE_RectangleMesh.hpp
        src/World/Chunk/NRE_Chunk.hpp
        src/World/Factory/NRE_ChunkFactory.hpp
        src/World/Mesh/NRE_ChunkMesh.hpp
        src/World/Polygonizer/NRE_ChunkPolygonizer.cpp
        src/World/Polygonizer/NRE_ChunkPolygonizer.hpp
        src/World/NRE_World.cpp
        src/World/NRE_World.hpp)

set(EXEC_LIST
        ${COMPILE_LIST}
        src/NRE_Main.cpp)

add_executable(NearlyRealEngine ${EXEC_LIST})

target_link_libraries(NearlyRealEngine "C:/lib/NRE/Windows/libNRE-System.a" "C:/lib/Glew/lib/libglew32.dll.a" "C:/lib/WindowsKits/10/Lib/10.0.17763.0/um/x64/OpenGL32.Lib" "C:/lib/WindowsKits/10/Lib/10.0.17763.0/um/x64/Psapi.Lib" "C:/lib/WindowsKits/10/Lib/10.0.17763.0/um/x64/Gdi32.Lib" "C:/lib/NRE/libNRE-Math.a" "C:/lib/NRE/libNRE-ECS.a")
